fix: scrolling on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -6,7 +6,7 @@ $shadow-color: rgba(0, 0, 0, 0.6);
 $border-radius: 5px;
 
 html, body {
-  height: 100vh;
+  height: 100%;
   margin: 0;
   display: flex;
   flex-direction: column;
